--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 
- parse inut line (json!), extract and decide where to show the data, obey joy buttons to switch/scroll views
+ - restructure the code: move away from POC stage
+ - parse inut line (json!), extract and decide where to show the data, obey joy buttons to switch/scroll views
+ - xdo support: draw limited keypad for q,w,e,s,esc,etc...
+ - primitive config file
  
