--- a/TODO
+++ b/TODO
@@ -1,4 +1,2 @@
+ - xdo support
 
- - parse inut line (json!), extract and decide where to show the data, obey joy buttons to switch/scroll views
- - xdo support: draw limited keypad for q,w,e,s,esc,etc...
- - use pango markup for output text 
