--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 - pages (3) for star system, planets. etc. Switch by joystick 'mode' wheel
 - extreme params for planets
+- EDSM upload/download
+- cairo to show star/planet/etc images
 
