--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 - pages (3) for star system, planets. etc. Switch by joystick 'mode' wheel
 - extreme params for planets
 - EDSM upload/download
-- cairo to show star/planet/etc images
+- show star/planet/etc icons
+- 16 buttons labels and actions
 
