--- a/TODO
+++ b/TODO
@@ -2,5 +2,5 @@
 - extreme params for planets
 - EDSM upload/download
 - show star/planet/etc icons
-- 16 buttons labels and actions
+- buttons labels and actions
 
