EDSM upload started

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 - pages (3) for star system, planets. etc. Switch by joystick 'mode' wheel
 - extreme params for planets
-- EDSM upload/download
+- EDSM upload (download?)
 - show star/planet/etc icons
 - buttons labels and actions
 
